--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "eventemitter3": "^5.0.1"
   }
 }
