--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
   "root": true,
-  "ignorePatterns": [ "./.eslintignore", "dist", "build" ]
+  "ignorePatterns": [ "./.eslintignore", "dist", "build" ],
+  "parser": "@typescript-eslint/parser"
 }
