--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
   "root": true,
   "ignorePatterns": [ "./.eslintignore", "dist", "build" ],
-  "parser": "@typescript-eslint/parser"
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  }
 }
