--- a/.eslintrc
+++ b/.eslintrc
@@ -5,5 +5,10 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
-  }
+  },
+  "plugins": [
+    "import",
+    "@typescript-eslint",
+    "simple-import-sort"
+  ]
 }
