--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:import/typescript",
-    "plugin:@typescript-eslint/eslint-recommended"
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
   ]
 }
