--- a/.eslintrc
+++ b/.eslintrc
@@ -17,5 +17,6 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier"
-  ]
+  ],
+  "rules": {}
 }
