--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "8",
@@ -22,6 +23,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "dompurify": "^3.1.7",
     "eventemitter3": "^5.0.1"
   }
 }
