--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "@textcomplete/core": "^0.1.13",
+    "@textcomplete/textarea": "^0.1.13",
     "dompurify": "^3.1.7",
     "eventemitter3": "^5.0.1"
   }
