--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     "no-nested-ternary": "warn",
     "no-use-before-define": "warn",
     "no-useless-computed-key": "warn",
-    "no-unsafe-optional-chaining": "warn"
+    "no-unsafe-optional-chaining": "warn",
+    "prefer-rest-params": "warn"
   }
 }
