--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "no-console": [ "warn", {
       "allow": [ "warn", "error" ]
     } ],
+    "no-unused-vars": "warn",
     "prefer-rest-params": "warn"
   }
 }
