--- a/.github/workflows/static-build.yml
+++ b/.github/workflows/static-build.yml
@@ -34,13 +34,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'yarn'
+          cache: 'pnpm'
       - name: Setup yarn
-        run: npm install -g yarn
+        run: npm install -g pnpm
       - name: Install dependencies
-        run: yarn
+        run: pnpm
       - name: Build
-        run: yarn build
+        run: pnpm build
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
