--- a/.github/workflows/static-build.yml
+++ b/.github/workflows/static-build.yml
@@ -34,13 +34,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: 'yarn'
       - name: Setup yarn
-        run: npm install -g pnpm
+        run: npm install -g yarn
       - name: Install dependencies
-        run: pnpm
+        run: yarn
       - name: Build
-        run: pnpm build
+        run: yarn build
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
